--- a/StopNShop2/Views/ProductReviews/Index.cshtml
+++ b/StopNShop2/Views/ProductReviews/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Index</h1>
@@ -15,6 +16,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.ReviewDetail)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Product)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -23,6 +27,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.ReviewDetail)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Product.ProductId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ProductReviewID">Edit</a> |
