--- a/StopNShop2/Views/ShoppingCarts/Delete.cshtml
+++ b/StopNShop2/Views/ShoppingCarts/Delete.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Delete</h1>
@@ -17,6 +18,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Quantity)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Product)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Product.ProductId)
+        </dd class>
     </dl>
     
     <form asp-action="Delete">
