--- a/StopNShop2/Views/ShoppingCarts/Edit.cshtml
+++ b/StopNShop2/Views/ShoppingCarts/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Edit</h1>
@@ -19,6 +20,11 @@
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ProductFK" class="control-label"></label>
+                <select asp-for="ProductFK" class="form-control" asp-items="ViewBag.ProductFK"></select>
+                <span asp-validation-for="ProductFK" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -29,6 +35,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
