--- a/StopNShop2/Views/WishLists/Create.cshtml
+++ b/StopNShop2/Views/WishLists/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model StopNShop2.Models.ProductReview
+﻿@model StopNShop2.Models.WishList
 
 @{
     ViewData["Title"] = "Create";
@@ -7,17 +7,12 @@
 
 <h1>Create</h1>
 
-<h4>ProductReview</h4>
+<h4>WishList</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ReviewDetail" class="control-label"></label>
-                <input asp-for="ReviewDetail" class="form-control" />
-                <span asp-validation-for="ReviewDetail" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="ProductFK" class="control-label"></label>
                 <select asp-for="ProductFK" class ="form-control" asp-items="ViewBag.ProductFK"></select>
