--- a/StopNShop2/Views/WishLists/Delete.cshtml
+++ b/StopNShop2/Views/WishLists/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model StopNShop2.Models.ProductReview
+﻿@model StopNShop2.Models.WishList
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,15 +9,9 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ProductReview</h4>
+    <h4>WishList</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ReviewDetail)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ReviewDetail)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Product)
         </dt>
@@ -27,7 +21,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="ProductReviewID" />
+        <input type="hidden" asp-for="WishListID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
