--- a/StopNShop2/Views/WishLists/Details.cshtml
+++ b/StopNShop2/Views/WishLists/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model StopNShop2.Models.ProductReview
+﻿@model StopNShop2.Models.WishList
 
 @{
     ViewData["Title"] = "Details";
@@ -8,15 +8,9 @@
 <h1>Details</h1>
 
 <div>
-    <h4>ProductReview</h4>
+    <h4>WishList</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ReviewDetail)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ReviewDetail)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Product)
         </dt>
@@ -26,6 +20,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ProductReviewID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.WishListID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
