--- a/StopNShop2/Views/WishLists/Index.cshtml
+++ b/StopNShop2/Views/WishLists/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<StopNShop2.Models.ShoppingCart>
+﻿@model IEnumerable<StopNShop2.Models.WishList>
 
 @{
     ViewData["Title"] = "Index";
@@ -14,9 +14,6 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Quantity)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Product)
             </th>
             <th></th>
@@ -26,15 +23,12 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Product.ProductId)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ShoppingCartID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ShoppingCartID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ShoppingCartID">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.WishListID">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.WishListID">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.WishListID">Delete</a>
             </td>
         </tr>
 }
