--- a/StopNShop2/Views/Admin/Index.cshtml
+++ b/StopNShop2/Views/Admin/Index.cshtml
@@ -24,6 +24,9 @@
         </div>
         <div class="col-sm d-flex">
             <a class="btn btn-primary" asp-area="" asp-controller="ShoppingCarts" asp-action="Index">Carts</a>
-        </div>      
+        </div>
+        <div class="col-sm d-flex">
+            <a class="btn btn-primary" asp-area="" asp-controller="WishLists" asp-action="Index">WishLists</a>
+        </div>
     </div>
 </div>
