Add free shipping icon
doesnt show up but it is there

--- a/StopNShop2/Views/Products/Index.cshtml
+++ b/StopNShop2/Views/Products/Index.cshtml
@@ -68,7 +68,11 @@
                     @Html.DisplayFor(modelItem => item.ImagePath)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.FreeShipping)
+                    @if (item.FreeShipping == true)
+                    {
+                        <img src = "C:\Users\gilli\Documents\GitHub\StopNShop\StopNShop2\Images\freeshippingtruck.png" alt = "" height = "50" width = "50"/>
+                    }
+                    @*@Html.DisplayFor(modelItem => item.FreeShipping)*@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Category.CategoryName)
