--- a/StopNShop2/Views/Products/Index.cshtml
+++ b/StopNShop2/Views/Products/Index.cshtml
@@ -70,7 +70,7 @@
                 <td>
                     @if (item.FreeShipping == true)
                     {
-                        <img src = "C:\Users\gilli\Documents\GitHub\StopNShop\StopNShop2\Images\freeshippingtruck.png" alt = "" height = "50" width = "50"/>
+                        <img src = "C:\Users\gilli\Documents\GitHub\StopNShop\StopNShop2\Images\freeshippingtruck.png" alt = "Unavailable" height = "50" width = "50">
                     }
                     @*@Html.DisplayFor(modelItem => item.FreeShipping)*@
                 </td>
