--- a/StopNShop2/Views/Products/Index.cshtml
+++ b/StopNShop2/Views/Products/Index.cshtml
@@ -68,7 +68,7 @@
                     @Html.DisplayFor(modelItem => item.ImagePath)
                 </td>
                 <td>
-                    @if (item.FreeShipping == true)
+                    @if (item.FreeShipping)
                     {
                         <img src = "C:\Users\gilli\Documents\GitHub\StopNShop\StopNShop2\Images\freeshippingtruck.png" alt = "Unavailable" height = "50" width = "50">
                     }
