Fixed image path

--- a/StopNShop2/Views/Products/Index.cshtml
+++ b/StopNShop2/Views/Products/Index.cshtml
@@ -71,7 +71,7 @@
             <td>
                 @if (item.FreeShipping)
                 {
-                    <img src="/Images/freeshippingtruck.png" alt="Available" width="50">
+                    <img src="/Images/freeshippingtruck.png" alt="Available" width="50" runat="server">
                 }
                 else
                 {
