--- a/StopNShop2/Views/Admin/Index.cshtml
+++ b/StopNShop2/Views/Admin/Index.cshtml
@@ -5,28 +5,31 @@
 }
 
 <h1>Admin Portal</h1>
-<div class="container">
-    <div class="flex-column">
-        <div class="col-sm d-flex">
-            <a class="btn btn-primary" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
-        </div>
-        <div class="col-sm d-flex">
-            <a class="btn btn-primary" asp-area="" asp-controller="ProductReviews" asp-action="Index">Reviews</a>
-        </div>
-        <div class="col-sm d-flex">
-            <a class="btn btn-primary" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
-        </div>
-        <div class="col-sm d-flex">
-            <a class="btn btn-primary" asp-area="" asp-controller="RoleManager" asp-action="Index">Roles</a>
-        </div>
-        <div class="col-sm d-flex">
-            <a class="btn btn-primary" asp-area="" asp-controller="UserRoles" asp-action="Index">User Roles</a>
-        </div>
-        <div class="col-sm d-flex">
-            <a class="btn btn-primary" asp-area="" asp-controller="ShoppingCarts" asp-action="Index">Carts</a>
-        </div>
-        <div class="col-sm d-flex">
-            <a class="btn btn-primary" asp-area="" asp-controller="WishLists" asp-action="Index">WishLists</a>
-        </div>
+<div class="d-flex align-items-stretch">
+    <div class="p-2 bd-highlight">
+        <a class="btn btn-primary" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+    </div>
+    <div class="p-2 bd-highlight">
+        <a class="btn btn-primary" asp-area="" asp-controller="ProductReviews" asp-action="Index">Reviews</a>
+    </div>
+    <div class="p-2 bd-highlight">
+        <a class="btn btn-primary" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
+    </div>
+    <div class="p-2 bd-highlight">
+        <a class="btn btn-primary" asp-area="" asp-controller="RoleManager" asp-action="Index">Roles</a>
+    </div>
+</div>
+<div class="d-flex align-items-stretch">
+    <div class="p-2 bd-highlight">
+        <a class="btn btn-primary" asp-area="" asp-controller="UserRoles" asp-action="Index">User Roles</a>
+    </div>
+    <div class="p-2 bd-highlight">
+        <a class="btn btn-primary" asp-area="" asp-controller="ShoppingCarts" asp-action="Index">Carts</a>
+    </div>
+    <div class="p-2 bd-highlight">
+        <a class="btn btn-primary" asp-area="" asp-controller="WishLists" asp-action="Index">WishLists</a>
+    </div>
+    <div class="p-2 bd-highlight">
+        <a class="btn btn-primary" asp-area="" asp-controller="ImageUploads" asp-action="Index">Upload Images</a>
     </div>
 </div>
