--- a/StopNShop2/Views/Products/Create.cshtml
+++ b/StopNShop2/Views/Products/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -33,11 +33,6 @@
                 <input asp-for="Rating" class="form-control" />
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ImagePath" class="control-label"></label>
-                <input asp-for="ImagePath" class="form-control" />
-                <span asp-validation-for="ImagePath" class="text-danger"></span>
-            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="FreeShipping" /> @Html.DisplayNameFor(model => model.FreeShipping)
@@ -45,7 +40,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="CategoryFK" class="control-label"></label>
-                <select asp-for="CategoryFK" class ="form-control" asp-items="ViewBag.CategoryFK"></select>
+                <select asp-for="CategoryFK" class="form-control" asp-items="ViewBag.Categoryfk"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageFK" class="control-label"></label>
+                <select asp-for="ImageFK" class="form-control" asp-items="ViewBag.ImageFK"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
