--- a/StopNShop2/Views/Products/Delete.cshtml
+++ b/StopNShop2/Views/Products/Delete.cshtml
@@ -36,12 +36,19 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Rating)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImagePath)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImagePath)
-        </dd>
+        <dd class="col-sm-10">
+            @if (Model.ImagePath != null)
+            {
+                <img id="prodImg" style="width:250px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(Model.ImagePath))">
+            }
+            else
+            {
+                <img id="prodImg" style="width:200px; height:200px; object-fit:cover" src="" alt="No Image Provided">
+            }
+        </dd>*@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FreeShipping)
         </dt>
