--- a/StopNShop2/Views/Products/Edit.cshtml
+++ b/StopNShop2/Views/Products/Edit.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId" />
             <div class="form-group">
@@ -34,11 +34,6 @@
                 <input asp-for="Rating" class="form-control" />
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ImagePath" class="control-label"></label>
-                <input asp-for="ImagePath" class="form-control" />
-                <span asp-validation-for="ImagePath" class="text-danger"></span>
-            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="FreeShipping" /> @Html.DisplayNameFor(model => model.FreeShipping)
@@ -48,6 +43,11 @@
                 <label asp-for="CategoryFK" class="control-label"></label>
                 <select asp-for="CategoryFK" class="form-control" asp-items="ViewBag.CategoryFK"></select>
                 <span asp-validation-for="CategoryFK" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageFK" class="control-label"></label>
+                <select asp-for="ImageFK" class="form-control" asp-items="ViewBag.ImageFK"></select>
+                <span asp-validation-for="ImageFK" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
