--- a/StopNShop2/Views/Products/Index.cshtml
+++ b/StopNShop2/Views/Products/Index.cshtml
@@ -25,7 +25,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ImagePath)
+                @Html.DisplayNameFor(model => model.ImageUpload.ImagePath)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Title)
@@ -54,7 +54,7 @@
         {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.ImagePath)
+                <img id="prodImg" style="width:150px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(item.ImageUpload.ImagePath))">
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
