--- a/StopNShop2/Views/Shared/_Layout.cshtml
+++ b/StopNShop2/Views/Shared/_Layout.cshtml
@@ -24,14 +24,14 @@
                     <a class="btn btn-warning" asp-area="" asp-controller="Admin" asp-action="Index">Admin Portal</a>
 
                     }
-                    <!--<ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>-->
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-light" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
+                    </li>
+                </ul>
                 </div>
             </div>
         </nav>
