--- a/StopNShop2/Views/Categories/Index.cshtml
+++ b/StopNShop2/Views/Categories/Index.cshtml
@@ -37,9 +37,15 @@
                     @Html.DisplayFor(modelItem => item.CategoryName)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.CategoryID">Edit</a> |
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.CategoryID">Edit</a> |
+}
                     <a asp-action="Details" asp-route-id="@item.CategoryID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.CategoryID">Delete</a>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a asp-action="Delete" asp-route-id="@item.CategoryID">Delete</a>
+                    }
                 </td>
             </tr>
         }
