Tried to implement cart

--- a/StopNShop2/Views/Categories/Index.cshtml
+++ b/StopNShop2/Views/Categories/Index.cshtml
@@ -39,9 +39,9 @@
                 <td>
                     @if (User.IsInRole("Admin"))
                     {
-                        <a asp-action="Edit" asp-route-id="@item.CategoryID">Edit</a> |
-}
-                    <a asp-action="Details" asp-route-id="@item.CategoryID">Details</a> |
+                        <a asp-action="Edit" asp-route-id="@item.CategoryID">Edit</a>
+                    }
+                        <a asp-action="Details" asp-route-id="@item.CategoryID">Details</a>
                     @if (User.IsInRole("Admin"))
                     {
                         <a asp-action="Delete" asp-route-id="@item.CategoryID">Delete</a>
