--- a/StopNShop2/Views/ShoppingCarts/Delete.cshtml
+++ b/StopNShop2/Views/ShoppingCarts/Delete.cshtml
@@ -19,6 +19,18 @@
             @Html.DisplayFor(model => model.Quantity)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Submitted)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Submitted)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.UserFK)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.UserFK)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Product)
         </dt>
         <dd class = "col-sm-10">
