--- a/StopNShop2/Views/Products/Index.cshtml
+++ b/StopNShop2/Views/Products/Index.cshtml
@@ -88,14 +88,17 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Category.CategoryName)
             </td>
-            @if (User.IsInRole("Admin"))
-            {
+            
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ProductId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> 
+                        <a asp-action="Details" asp-route-id="@item.ProductId">Details</a> 
+                        <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
+                    }
+                    <a href="@Url.Action("Buy", "Cart", new { id = item.ProductId })">Buy</a>
                 </td>
-            }
+            
         </tr>
         }
     </tbody>
