--- a/StopNShop2/Views/Shared/_Layout.cshtml
+++ b/StopNShop2/Views/Shared/_Layout.cshtml
@@ -25,9 +25,12 @@
 
                     }
                 <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-light" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
-                    </li>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                        </li>
+                    }
                     <li class="nav-item">
                         <a class="nav-link text-light" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
                     </li>
