--- a/StopNShop2/Views/ShoppingCarts/Edit.cshtml
+++ b/StopNShop2/Views/ShoppingCarts/Edit.cshtml
@@ -19,6 +19,16 @@
                 <input asp-for="Quantity" class="form-control" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Submitted" /> @Html.DisplayNameFor(model => model.Submitted)
+                </label>
+            </div>
+            <div class="form-group">
+                <label asp-for="UserFK" class="control-label"></label>
+                <input asp-for="UserFK" class="form-control" />
+                <span asp-validation-for="UserFK" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="ProductFK" class="control-label"></label>
                 <select asp-for="ProductFK" class="form-control" asp-items="ViewBag.ProductFK"></select>
