--- a/StopNShop2/Views/ImageUploads/Index.cshtml
+++ b/StopNShop2/Views/ImageUploads/Index.cshtml
@@ -26,7 +26,14 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                <img id="prodImg" style="width:150px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(item.ImagePath))">
+                @try
+                {
+                    <img id="prodImg" style="width:150px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(item.ImagePath))">
+                }
+                catch (ArgumentNullException)
+                {
+                    <img src="~/Images/warning.png" alt="Error: No image" width="50" runat="server">
+                }
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FileName)
