--- a/StopNShop2/Views/Products/Index.cshtml
+++ b/StopNShop2/Views/Products/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Shop</h1>
+<div class="justify-content-center d-flex align-content-center"><h1>Shop</h1></div>
 
 <!--
     Needs work. Preferred display would have products displayed in a grid (table), each entry in the table having each product's info.
@@ -15,7 +15,7 @@
     ImagePath not implemented, admin has no way to upload an image currently.
 -->
 <form asp-action="Index" method="get">
-    <div>
+    <div class="justify-content-center d-flex align-content-center">
         <p>
             Search Products: <input type="text" name="searchString" value=""/>
             <a asp-action="Index">Remove Filter</a>
@@ -24,11 +24,11 @@
 </form>
 @if (User.IsInRole("Admin"))
 {
-<p>
+<div class="justify-content-center d-flex align-content-center">
     <a asp-action="Create">Create New</a>
-</p>
+</div>
 }
-<table class="table">
+@*<table class="table">
     <thead>
         <tr>
             <th>
@@ -95,4 +95,67 @@
         </tr>
         }
     </tbody>
-</table>
+</table>*@
+
+
+
+@foreach (var item in Model)
+{
+    <div class="p-2">
+        <div class="d-flex justify-content-center align-item-center">
+            <div class="flex-column p-2 m-auto border text-center">
+                <div>
+                    <img id="prodImg" style="width:150px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(item.ImageUpload.ImagePath))">
+                </div>
+                <div class="text-center">
+                    <b>@Html.DisplayFor(modelItem => item.Title)</b>
+                </div>
+                @if (item.Price < item.PreviousPrice)
+                {
+                    decimal price = item.Price;
+                    decimal previousPrice = item.PreviousPrice;
+                    int discount = (int)(((previousPrice - price) / previousPrice) * 100);
+                    string discString = discount.ToString();
+
+                    <div class="text-danger">
+                        <s>$@Html.DisplayFor(modelItem => item.PreviousPrice)</s>
+                    </div>
+                    <div>
+                        $@Html.DisplayFor(modelItem => item.Price)
+                    </div>
+                    <div class="text-success">
+                        @discString% off!
+                    </div>
+                }
+                else
+                {
+                    <div>
+                        $@Html.DisplayFor(modelItem => item.Price)
+                    </div>
+                }
+                <div>
+                    Category: @Html.DisplayFor(modelItem => item.Category.CategoryName)
+                </div>
+                @if (item.FreeShipping)
+                {
+                    <div>
+                        <img src="~/Images/freeshippingtruck.png" alt="Available" width="50" runat="server">
+                    </div>
+                }
+                else
+                {
+                    <div class="text-danger">Free Shipping Unavailable</div>
+                }
+                <div>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a>
+                        <a asp-action="Details" asp-route-id="@item.ProductId">Details</a>
+                        <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
+                    }
+                    <a asp-action="Cart" asp-route-id="@item.ProductId">Buy</a>
+                </div>
+            </div>
+        </div>
+    </div>
+}
