--- a/StopNShop2/Views/Admin/Index.cshtml
+++ b/StopNShop2/Views/Admin/Index.cshtml
@@ -12,14 +12,14 @@
     <div class="p-2 bd-highlight">
         <a class="btn btn-primary" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
     </div>
-    <div class="p-2 bd-highlight">
+    @*<div class="p-2 bd-highlight">
         <a class="btn btn-primary" asp-area="" asp-controller="RoleManager" asp-action="Index">Roles</a>
-    </div>
+    </div>*@
 </div>
 <div class="d-flex align-items-stretch">
-    <div class="p-2 bd-highlight">
+    @*<div class="p-2 bd-highlight">
         <a class="btn btn-primary" asp-area="" asp-controller="UserRoles" asp-action="Index">User Roles</a>
-    </div>
+    </div>*@
     <div class="p-2 bd-highlight">
         <a class="btn btn-primary" asp-area="" asp-controller="ImageUploads" asp-action="Index">Upload Images</a>
     </div>
