--- a/StopNShop2/Views/Products/Cart.cshtml
+++ b/StopNShop2/Views/Products/Cart.cshtml
@@ -90,32 +90,32 @@
         <form asp-action="Cart">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                Card Number
-                <input class="form-control" />
+                Card Number (Without Hyphens)
+                <input class="form-control" pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|[25][1-7][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$" required/>
             </div>
             <div class="form-group">
                 Cardholder's Name
-                <input class="form-control" />
+                <input class="form-control" required/>
             </div>
             <div class="form-group">
                 CVV
-                <input class="form-control" />
+                <input class="form-control" pattern="^[0-9]{3, 4}$" required/>
             </div>
             <div class="form-group">
                 Phone Number
-                <input class="form-control" />
+                <input class="form-control" pattern="^(\+\d{1,2}\s)?\(?\d{3}\)?[\s.-]?\d{3}[\s.-]?\d{4}$" required/>
             </div>
             <div class="form-group">
                 Billing Address
-                <input class="form-control" />
+                <input class="form-control" required/>
             </div>
             <div class="form-group">
                 Shipping Address
-                <input class="form-control" />
+                <input class="form-control" required/>
             </div>
             <div class="form-group">
                 Email Address
-                <input class="form-control" />
+                <input class="form-control" type="email" required/>
             </div>
             <div class="form-group">
                 <span class="font-weight-bold">Total:</span>
