--- a/StopNShop2/Views/ImageUploads/Delete.cshtml
+++ b/StopNShop2/Views/ImageUploads/Delete.cshtml
@@ -16,7 +16,7 @@
             @Html.DisplayNameFor(model => model.ImagePath)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImagePath)
+            @Html.DisplayFor(model => model.FileName)
         </dd>
     </dl>
     
